fixed some broken styles

--- a/styles/style.css
+++ b/styles/style.css
@@ -287,14 +287,10 @@ header {
     clear: both;
     padding: 80px 0;
 }
-.footer-content .wrapper {
-    border: 1px solid tomato;
-}
 .footer-links-content,
 .stay-updated-content,
 .contact-content {
     float: left;
-    border: 1px solid tomato;
 }
 .footer-links-content {
     width: 20%;
